Oops we need logging.root

--- a/tests/exlogging.conf
+++ b/tests/exlogging.conf
@@ -5,6 +5,11 @@ disable_existing_loggers=no
 [logging.formatter:form01]
 format=%(levelname)s %(message)s
 
+[logging.handler:stderr]
+class=logging.StreamHandler
+stream=ext://sys.stderr
+formatter=form01
+
 [logging.handler:hand01]
 class=logging.FileHandler
 filename=%(tempdir)s/hand01.log
@@ -14,3 +19,6 @@ formatter=form01
 handlers=hand01
 level=DEBUG
 propagate=False
+
+[logging.root]
+handlers=stderr
